--- a/styles/global.css
+++ b/styles/global.css
@@ -14,7 +14,7 @@
   position: fixed;
   display: flex;
   justify-content: center;
-  padding: 120px 24px 160px 24px;
+  /* padding: 120px 24px 160px 24px; */
   pointer-events: none;
 }
 
@@ -65,134 +65,33 @@
   opacity: 0.15;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 740px) {
   .main {
     padding: 0;
+  }
+  .app {
+    @apply px-[20px] py-[50px];
+  }
+  .cardWrapper {
+    align-items: stretch;
+  }
+  .card{
+    flex-grow: stre;
+  }
+  .boxModal{
+    padding: 20px!important;
+    margin: 20px;
+    border-radius: 10px;
+    min-height: calc(100vh / 2)!important;
   }
 }
 
 /* Tailwind Styles */
 
 .app {
-  @apply relative z-10 flex justify-center items-center flex-col max-w-7xl mx-auto sm:px-16 px-6;
+  @apply relative mx-auto z-10 flex justify-center lg:items-center md:items-center flex-col lg:max-w-7xl  lg:px-6;
 }
 
-.black_btn {
-  @apply rounded-full border border-black bg-black py-1.5 px-5 text-white transition-all hover:bg-white hover:text-black text-center text-sm font-inter flex items-center justify-center;
-}
-
-.outline_btn {
-  @apply rounded-full border border-black bg-transparent py-1.5 px-5 text-black transition-all hover:bg-black hover:text-white text-center text-sm font-inter flex items-center justify-center;
-}
-
-.head_text {
-  @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
-}
-
-.orange_gradient {
-  @apply bg-gradient-to-r from-amber-500 via-orange-600 to-yellow-500 bg-clip-text text-transparent;
-}
-
-.green_gradient {
-  @apply bg-gradient-to-r from-green-400 to-green-500 bg-clip-text text-transparent;
-}
-
-.blue_gradient {
-  @apply bg-gradient-to-r from-blue-600 to-cyan-600 bg-clip-text text-transparent;
-}
-
-.desc {
-  @apply mt-5 text-lg text-gray-600 sm:text-xl max-w-2xl;
-}
-
-.search_input {
-  @apply block w-full rounded-md border border-gray-200 bg-white py-2.5 font-satoshi pl-5 pr-12 text-sm shadow-lg font-medium focus:border-black focus:outline-none focus:ring-0;
-}
-
-.copy_btn {
-  @apply w-7 h-7 rounded-full bg-white/10 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur flex justify-center items-center cursor-pointer;
-}
-
-.glassmorphism {
-  @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-5;
-}
-
-.prompt_layout {
-  @apply space-y-6 py-8 sm:columns-2 sm:gap-6 xl:columns-3;
-}
-
-/* Feed Component */
-.feed {
-  @apply mt-16 mx-auto w-full max-w-xl flex justify-center items-center flex-col gap-2;
-}
-
-/* Form Component */
-.form_textarea {
-  @apply w-full flex rounded-lg h-[200px] mt-2 p-3 text-sm text-gray-500 outline-0;
-}
-
-.form_input {
-  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0;
-}
-
-/* Nav Component */
-.logo_text {
-  @apply max-sm:hidden font-satoshi font-semibold text-lg text-black tracking-wide;
-}
-
-.dropdown {
-  @apply absolute right-0 top-full mt-3 w-full p-5 rounded-lg bg-white min-w-[210px] flex flex-col gap-2 justify-end items-end;
-}
-
-.dropdown_link {
-  @apply text-sm font-inter text-gray-700 hover:text-gray-500 font-medium;
-}
-
-/* PromptCard Component */
-.prompt_card {
-  @apply flex-1 break-inside-avoid rounded-lg border border-gray-300 bg-white/20 bg-clip-padding p-6 pb-4 backdrop-blur-lg backdrop-filter md:w-[360px] w-full h-fit;
-}
-
-.flex-center {
-  @apply flex justify-center items-center;
-}
-
-.flex-start {
-  @apply flex justify-start items-start;
-}
-
-.flex-end {
-  @apply flex justify-end items-center;
-}
-
-.flex-between {
-  @apply flex justify-between items-center;
-}
-
-/* 
-.MuiDataGrid-root{
-  background-color: black;
-  color: white!important;
-  font-family: Arial, Helvetica, sans-serif;
-  border-radius: 0px!important;
-  padding: 100px;
-  height: auto!important;
-}
-
-.MuiToolbar-root{
-  color: white;
-  border-radius: 0px!important;
-}
-
-.MuiDataGrid-row{
-  background-color: black;
-  
-}
-
-
-.MuiDataGrid-virtualScrollerContent{
-  background-color: rgb(19, 19, 19);
-} */
 
 .MuiDataGrid-columnHeaderTitle{
   font-weight: bold!important;
@@ -201,6 +100,8 @@
 .MuiDataGrid-columnHeader{
   background-color: rgb(247, 247, 247);
 }
+
+
 h1{
   font-weight: 600;
   font-size: 1.3em;
@@ -214,15 +115,22 @@ h1{
 
 .cardWrapper{
   display: flex;
+  align-items: stretch;
+  width: auto;
   gap: 10px;
 }
 
 .card{
-  width: 50%;
   border: 1px solid rgba(224, 224, 224, 1);
   border-radius: 5px;
   padding: 20px!important;
   margin-bottom: 30px;
+  left: 0px;
+  min-width: calc((60% - 1rem) / 2);
+}
+
+.card:first-child{
+  min-width: 40%;
 }
 
 .card p{
@@ -236,7 +144,6 @@ h1{
 }
 
  .card-saldo{
-  min-width: 50%;
   background-color: white;
  }
 
