--- a/styles/global.css
+++ b/styles/global.css
@@ -72,17 +72,39 @@
   .app {
     @apply px-[20px] py-[50px];
   }
-  .cardWrapper {
-    align-items: stretch;
-  }
-  .card{
-    flex-grow: stre;
-  }
+  
+ 
   .boxModal{
     padding: 20px!important;
     margin: 20px;
     border-radius: 10px;
     min-height: calc(100vh / 2)!important;
+  }
+
+  .cardWrapper{
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+  }
+
+  .card-saldo {
+    width: 100%!important;
+  }
+
+  .card{
+    margin: 0px!important;
+    width:calc(50% - 5px);
+  
+  }
+
+  .card p{
+    font-size: 1.3rem!important;
+  
+  }
+  
+  .card h2{
+ 
+    font-size: 0.7em;
   }
 }
 
@@ -126,7 +148,7 @@ h1{
   padding: 20px!important;
   margin-bottom: 30px;
   left: 0px;
-  min-width: calc((60% - 1rem) / 2);
+  min-width: calc((60% - 10px) / 2);
 }
 
 .card:first-child{
